# APIs

./: .dockerignore  .replit  Dockerfile  app.py  pyproject.toml
static/: win95.css
templates/: admin.html  app_created.html  create_app.html  developer_dashboard.html  developer_login.html  developer_register.html  docs.html  edit_app.html  index.html  oauth_authorize.html  oauth_error.html  oauth_playground.html  oauth_playground_old.html  playground.html  teacher_playground.html
